--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="about.html">About</a>
                 <a href="certs.html">Certificates</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="projects.html">Projects</a>
+                <a href="experiences.html">Experiences</a>
             </nav>
         </header>
 
