--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
                 <a href="index.html">Home</a>
                 <a href="#about.html" class="active">About</a>
                 <a href="certs.html">Certificates</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="projects.html">Projects</a>
+                <a href="experiences.html">Experiences</a>
             </nav>
         </header>
 
