--- a/certs.html
+++ b/certs.html
@@ -18,8 +18,8 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="certs.html" class="active">Certificates</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="projects.html">Projects</a>
+                <a href="experiences.html">Experiences</a>
             </nav>
         </header>
 
